[gd_scene load_steps=2 format=3 uid="uid://csi8scpi2qeua"]

[ext_resource type="Script" uid="uid://dy383xf47v5ep" path="res://addons/dialogue_editor/dialogue_editor_panel.gd" id="1_bamo5"]

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_bamo5")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 250

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Characters"

[node name="CharacterList" type="ItemList" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
item_count = 3
item_0/text = "Mike"
item_1/text = "Dave"
item_2/text = "Bobby"

[node name="AddButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Add"

[node name="RemoveButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Remove"

[node name="SaveButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="GraphEdit" type="GraphEdit" parent="HSplitContainer"]
layout_mode = 2
right_disconnects = true
connections = Array[Dictionary]([{
"from_node": &"5226966",
"from_port": 0,
"keep_alive": false,
"to_node": &"5233487",
"to_port": 0
}])
